# realron

./: .claude.json.backup  .gitattributes  .gitignore  .start-claude-env.sh  .stats.yml  .user-data-cloud-init.sh  ADD_BROWSER_USE_KEY.md  AGENT_ORCHESTRATION_SOLUTION.md  AI_Clinical_Decision_Support_Paper.md  AI_Clinical_Decision_Support_Report_Part1.md  AI_Clinical_Decision_Support_Research_Compilation.md  ANTHROPIC_SDK_AUDIT_FINDINGS.md  BROWSERBASE_MCP_INTEGRATION_FIXED.md  BROWSER_AUTOMATION_MIGRATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_API_RESEARCH.md  CLAUDE_CODE_FIX_SUMMARY.md  CLAUDE_CODE_SDK_IMPLEMENTATION.md  CLAUDE_CODE_SDK_PROJECTS_PREVIEW.md  CLAUDE_COMPUTER_USE_EC2_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  EXECUTIVE_SUMMARY.md  FRONTEND_IMPROVEMENT_PLAN.md  IMPLEMENTATION_PLAN_COT_TOOLS_AGENTS.md  LICENSE  OFFICIAL_CLAUDE_COMPUTER_USE_GUIDE.md  README.md  REFACTORED_IMPLEMENTATION_EXAMPLE.md  RON_AI_PROJECT_ANALYSIS.md  SECURITY.md  TECHNICAL_IMPLEMENTATION_PLAN.md  api.md  backend_startup_fix.py  bmi-calculator.html  browser-use-cloud-setup.md  clinical_dashboard.html  (+56 more)
.claude/: settings.json.hooks_backup
.kilocode/: mcp.json
.next/: trace
.next.backup/: trace
ai-clinical-portal/: clinical-dashboard.html  executive-slides.html  index.html  research-report.html
aws-native-implementation/: generated_medication_calculator.py  run_tests.sh  show_generated_code.py  test_aws_integration.py  test_claude_agent_working.py  test_code_sdk_working.py
backend/: CCCMappingTables201912017_Finalized.xlsx  api.py  (+27 more)
(+381 files in other folders)
