[project]
name = "ron-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.61.0",
    "browser-use>=0.5.5",
    "fastapi>=0.116.1",
    "google-adk>=0.1.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-logging>=3.8.0",
    "google-cloud-storage>=2.10.0",
    "google-generativeai>=0.3.0",
    "mcp>=1.12.3",
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
